[package]
name = "airdrops-registry"
version = "0.1.0"
authors = ["Galactic Minter <gm@staderlabs.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0", features = ["iterator", "staking"] }
cosmwasm-storage = { version = "1.0.0", features = ["iterator"] }
cw-storage-plus = { version = "0.13.2", features = ["iterator"] }
schemars = "0.8.1"
cw20 = "0.13.2"
cw2 = "0.13.2"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }
cosmwasm-bignumber = "2.2.0"
stader-utils = { path = "./../../packages/stader-utils", version = "0.1.0"}

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
