[package]
name = "scc"
version = "0.1.0"
authors = ["Bharath Vedartham <vedabharath12345@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "0.16.0", features = ["iterator", "staking"] }
cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
cw-storage-plus = { version = "0.8.0", features = ["iterator"] }
schemars = "0.8.1"
cw20 = "0.8.0"
cw2 = "0.9.0"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }
cosmwasm-bignumber = "2.1.1"
terra-cosmwasm = { version = "2.1.0" }
sic-base = { path = "../../packages/sic-base", version = "0.1.0", features = ["library"] }
stader-utils = { path = "./../../packages/stader-utils", version = "0.1.0"}

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
