[package]
name = "staking"
version = "0.1.0"
authors = ["dheerajborra"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "0.16.2", features = ["staking", "iterator"] }
cosmwasm-storage = { version = "0.16.0" }
cw-storage-plus = "0.8.0"
schemars = "0.8.3"
cw2 = "0.8.1"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
stader-utils = { version = "0.1.0", path = "./../../packages/stader-utils"}
reward = { path = "./../reward", version = "0.1.0", features = ["library"] }
airdrops-registry = { path = "./../airdrops-registry", version = "0.1.0", features = ["library"] }
terra-cosmwasm = { version = "2.1.0" }
cw20-base = { version = "0.9.0", features = ["library"] }
cw20 = { version = "0.9.0" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
